--- a/ARBeauty/Storyboards/Base.lproj/Main.storyboard
+++ b/ARBeauty/Storyboards/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -511,10 +512,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8I2-KL-Jmm">
-                                                <rect key="frame" x="304" y="25" width="100" height="33"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="100" id="eof-Nu-y1H"/>
-                                                </constraints>
+                                                <rect key="frame" x="341" y="23.666666666666629" width="48" height="33"/>
                                                 <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="18"/>
                                                 <state key="normal" title="Right">
                                                     <color key="titleColor" red="0.83157072099999996" green="0.33782239409999998" blue="0.84651399859999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -523,11 +521,17 @@
                                                     <action selector="flipHandButtonTapped:" destination="Of0-jy-81A" eventType="touchUpInside" id="S8Z-W0-r1y"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q81-nd-cjm">
-                                                <rect key="frame" x="46" y="30" width="46" height="21"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <color key="tintColor" red="0.83157072099999996" green="0.33782239409999998" blue="0.84651399859999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <state key="normal" backgroundImage="photo" catalog="system"/>
+                                            <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q81-nd-cjm">
+                                                <rect key="frame" x="25" y="18" width="50" height="44"/>
+                                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="50" id="8wA-AN-yVV"/>
+                                                    <constraint firstAttribute="height" constant="50" id="e3C-mj-yU5"/>
+                                                </constraints>
+                                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <state key="normal">
+                                                    <imageReference key="backgroundImage" image="photo" catalog="system" symbolScale="small"/>
+                                                </state>
                                                 <connections>
                                                     <action selector="pickPhotoTapped:" destination="Of0-jy-81A" eventType="touchUpInside" id="Exo-EO-XHd"/>
                                                 </connections>
@@ -535,9 +539,11 @@
                                         </subviews>
                                         <color key="backgroundColor" red="0.97236901519999996" green="0.92886036630000002" blue="0.95686596629999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
-                                            <constraint firstItem="8I2-KL-Jmm" firstAttribute="top" secondItem="CKm-UR-V55" secondAttribute="top" constant="25" id="OoP-X0-IUj"/>
+                                            <constraint firstItem="8I2-KL-Jmm" firstAttribute="centerY" secondItem="zyk-h6-ObF" secondAttribute="centerY" id="Wze-Gu-2y7"/>
+                                            <constraint firstItem="q81-nd-cjm" firstAttribute="centerY" secondItem="zyk-h6-ObF" secondAttribute="centerY" id="XXn-Dh-8VV"/>
+                                            <constraint firstItem="q81-nd-cjm" firstAttribute="leading" secondItem="CKm-UR-V55" secondAttribute="leading" constant="25" id="YN9-Ga-18U"/>
                                             <constraint firstItem="zyk-h6-ObF" firstAttribute="centerX" secondItem="CKm-UR-V55" secondAttribute="centerX" id="kIM-Dd-0KV"/>
-                                            <constraint firstAttribute="trailing" secondItem="8I2-KL-Jmm" secondAttribute="trailing" constant="10" id="l4C-5l-epd"/>
+                                            <constraint firstAttribute="trailing" secondItem="8I2-KL-Jmm" secondAttribute="trailing" constant="25" id="l4C-5l-epd"/>
                                             <constraint firstAttribute="height" constant="114" id="tmF-aE-5Q1"/>
                                             <constraint firstItem="zyk-h6-ObF" firstAttribute="top" secondItem="CKm-UR-V55" secondAttribute="top" constant="10" id="u29-VC-Nc2"/>
                                         </constraints>
