--- a/ARBeauty/Storyboards/Base.lproj/Main.storyboard
+++ b/ARBeauty/Storyboards/Base.lproj/Main.storyboard
@@ -28,16 +28,19 @@
                                 </constraints>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kfa-FP-QMb" userLabel="Menu Box">
-                                <rect key="frame" x="0.0" y="245.33333333333331" width="414" height="520.66666666666674"/>
+                                <rect key="frame" x="0.0" y="245.33333333333334" width="414" height="490.66666666666663"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="D5Y-wa-q9N">
-                                        <rect key="frame" x="57" y="90.333333333333343" width="300" height="310"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="D5Y-wa-q9N">
+                                        <rect key="frame" x="57" y="30.333333333333343" width="300" height="430"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mNd-Av-tb0" userLabel="Nails View">
                                                 <rect key="frame" x="0.0" y="0.0" width="300" height="100"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleAspectFit" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B0Q-6e-dAW" customClass="ARButton" customModule="ARBeauty" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="0.0" width="300" height="90"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="300" height="100"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="100" id="l0E-wk-uM1"/>
+                                                        </constraints>
                                                         <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="20"/>
                                                         <inset key="imageEdgeInsets" minX="25" minY="25" maxX="225" maxY="25"/>
                                                         <state key="normal" title="NAILS" image="nail_icon">
@@ -50,7 +53,6 @@
                                                 </subviews>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="bottom" secondItem="B0Q-6e-dAW" secondAttribute="bottom" constant="10" id="5e5-6d-Vl8"/>
                                                     <constraint firstItem="B0Q-6e-dAW" firstAttribute="top" secondItem="mNd-Av-tb0" secondAttribute="top" id="GpW-Zl-Oqw"/>
                                                     <constraint firstAttribute="height" constant="100" id="VX8-3s-mst"/>
                                                     <constraint firstAttribute="trailing" secondItem="B0Q-6e-dAW" secondAttribute="trailing" id="Xtd-J8-cjm"/>
@@ -58,10 +60,10 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BVM-gK-0Tu" userLabel="Lips View">
-                                                <rect key="frame" x="0.0" y="100" width="300" height="110"/>
+                                                <rect key="frame" x="0.0" y="110" width="300" height="100"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pCm-FD-xvC" userLabel="Lips Button" customClass="ARButton" customModule="ARBeauty" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="10" width="300" height="90"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="300" height="100"/>
                                                         <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="20"/>
                                                         <inset key="imageEdgeInsets" minX="25" minY="25" maxX="225" maxY="25"/>
                                                         <state key="normal" title="LIPS" image="lips_icon">
@@ -73,18 +75,42 @@
                                                     </button>
                                                 </subviews>
                                                 <constraints>
-                                                    <constraint firstItem="pCm-FD-xvC" firstAttribute="top" secondItem="BVM-gK-0Tu" secondAttribute="top" constant="10" id="Fw4-rf-21t"/>
+                                                    <constraint firstItem="pCm-FD-xvC" firstAttribute="top" secondItem="BVM-gK-0Tu" secondAttribute="top" id="Fw4-rf-21t"/>
                                                     <constraint firstItem="pCm-FD-xvC" firstAttribute="leading" secondItem="BVM-gK-0Tu" secondAttribute="leading" id="Jgx-HE-8K8"/>
-                                                    <constraint firstAttribute="height" constant="110" id="WPx-RP-bQk"/>
-                                                    <constraint firstAttribute="bottom" secondItem="pCm-FD-xvC" secondAttribute="bottom" constant="10" id="fyU-Y4-eLU"/>
+                                                    <constraint firstAttribute="height" constant="100" id="ahR-qq-6BB"/>
+                                                    <constraint firstAttribute="bottom" secondItem="pCm-FD-xvC" secondAttribute="bottom" id="fyU-Y4-eLU"/>
                                                     <constraint firstAttribute="trailing" secondItem="pCm-FD-xvC" secondAttribute="trailing" id="z0Z-Pr-cx7"/>
                                                 </constraints>
                                             </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JqW-sL-qWc" userLabel="LENS View">
+                                                <rect key="frame" x="0.0" y="220" width="300" height="100"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleAspectFit" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GVj-WH-DTw" customClass="ARButton" customModule="ARBeauty" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="300" height="100"/>
+                                                        <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="20"/>
+                                                        <inset key="imageEdgeInsets" minX="25" minY="25" maxX="225" maxY="25"/>
+                                                        <state key="normal" title="LENS" image="eye">
+                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </state>
+                                                        <connections>
+                                                            <action selector="lensButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rQg-4M-V7T"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="100" id="2xO-sa-uYe"/>
+                                                    <constraint firstItem="GVj-WH-DTw" firstAttribute="leading" secondItem="JqW-sL-qWc" secondAttribute="leading" id="8d8-qN-gUC"/>
+                                                    <constraint firstAttribute="trailing" secondItem="GVj-WH-DTw" secondAttribute="trailing" id="LRE-qf-fDW"/>
+                                                    <constraint firstAttribute="bottom" secondItem="GVj-WH-DTw" secondAttribute="bottom" id="qgX-Qh-0WO"/>
+                                                    <constraint firstItem="GVj-WH-DTw" firstAttribute="top" secondItem="JqW-sL-qWc" secondAttribute="top" id="zmo-CH-4d0"/>
+                                                </constraints>
+                                            </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FD6-X8-0vX" userLabel="Gallery View">
-                                                <rect key="frame" x="0.0" y="209.99999999999994" width="300" height="100"/>
+                                                <rect key="frame" x="0.0" y="329.99999999999994" width="300" height="100"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kM3-wE-Vam" userLabel="Gallery Button" customClass="ARButton" customModule="ARBeauty" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="10" width="300" height="90"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="300" height="100"/>
                                                         <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="20"/>
                                                         <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                         <inset key="imageEdgeInsets" minX="25" minY="25" maxX="225" maxY="25"/>
@@ -101,28 +127,19 @@
                                                     <constraint firstAttribute="bottom" secondItem="kM3-wE-Vam" secondAttribute="bottom" id="MNW-sH-JGZ"/>
                                                     <constraint firstAttribute="trailing" secondItem="kM3-wE-Vam" secondAttribute="trailing" id="TDF-Ef-sRj"/>
                                                     <constraint firstItem="kM3-wE-Vam" firstAttribute="leading" secondItem="FD6-X8-0vX" secondAttribute="leading" id="ZpP-J7-h4H"/>
-                                                    <constraint firstItem="kM3-wE-Vam" firstAttribute="top" secondItem="FD6-X8-0vX" secondAttribute="top" constant="10" id="uoZ-xG-bg6"/>
+                                                    <constraint firstItem="kM3-wE-Vam" firstAttribute="top" secondItem="FD6-X8-0vX" secondAttribute="top" id="uoZ-xG-bg6"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="310" id="Qzl-cX-JoT"/>
                                             <constraint firstAttribute="width" constant="300" id="SSc-j7-eyM"/>
                                         </constraints>
                                     </stackView>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eMp-Ps-ltm">
-                                        <rect key="frame" x="205" y="7" width="46" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Button"/>
-                                        <connections>
-                                            <segue destination="Qv0-gj-s46" kind="presentation" modalPresentationStyle="fullScreen" id="pyw-Lf-YLk"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.96469572401538339" green="0.93259488221618603" blue="0.95667051356558408" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
+                                    <constraint firstItem="D5Y-wa-q9N" firstAttribute="centerY" secondItem="kfa-FP-QMb" secondAttribute="centerY" id="0XV-B9-Ara"/>
                                     <constraint firstItem="D5Y-wa-q9N" firstAttribute="centerX" secondItem="kfa-FP-QMb" secondAttribute="centerX" id="208-Fa-Oja"/>
-                                    <constraint firstItem="D5Y-wa-q9N" firstAttribute="centerY" secondItem="kfa-FP-QMb" secondAttribute="centerY" constant="-15" id="kt5-lM-BEH"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -131,7 +148,7 @@
                         <constraints>
                             <constraint firstItem="yF9-1A-gDm" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="KaF-J0-ENV"/>
                             <constraint firstItem="yF9-1A-gDm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="LJk-Gw-v9n"/>
-                            <constraint firstAttribute="bottom" secondItem="kfa-FP-QMb" secondAttribute="bottom" constant="-30" id="N7Q-iO-tzG"/>
+                            <constraint firstAttribute="bottom" secondItem="kfa-FP-QMb" secondAttribute="bottom" id="N7Q-iO-tzG"/>
                             <constraint firstItem="yF9-1A-gDm" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.3333" id="NuK-5a-7An"/>
                             <constraint firstItem="kfa-FP-QMb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="PYy-H8-auS"/>
                             <constraint firstAttribute="trailing" secondItem="kfa-FP-QMb" secondAttribute="trailing" id="Qsp-EM-xdJ"/>
@@ -1128,9 +1145,7 @@
                                         <color key="tintColor" red="0.2756263316" green="0.307836622" blue="0.39608955379999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <state key="normal" image="house.fill" catalog="system"/>
                                         <connections>
-                                            <action selector="backTapped:" destination="Qv0-gj-s46" eventType="touchUpInside" id="WAk-g8-eff"/>
-                                            <action selector="homeTapped:" destination="Of0-jy-81A" eventType="touchUpInside" id="HtK-sS-rcA"/>
-                                            <action selector="homeTapped:" destination="Qv0-gj-s46" eventType="touchUpInside" id="PMF-4f-k6r"/>
+                                            <action selector="backTapped:" destination="Qv0-gj-s46" eventType="touchUpInside" id="L3I-cw-CPg"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -1197,7 +1212,7 @@
                                         </constraints>
                                         <state key="normal" image="shoot_button_icon"/>
                                         <connections>
-                                            <action selector="captureTapped:" destination="Qv0-gj-s46" eventType="touchUpInside" id="KAU-26-w99"/>
+                                            <action selector="captureTapped:" destination="Qv0-gj-s46" eventType="touchUpInside" id="Zjj-PY-KGI"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -1247,6 +1262,7 @@
         <image name="background" width="213.33332824707031" height="378.66665649414062"/>
         <image name="down_arrow_icon" width="8" height="8"/>
         <image name="download" width="512" height="512"/>
+        <image name="eye" width="512" height="512"/>
         <image name="gallery_icon" width="42.666667938232422" height="42.666667938232422"/>
         <image name="handleft" width="142.66667175292969" height="194.33332824707031"/>
         <image name="house.fill" catalog="system" width="128" height="106"/>
