--- a/ARBeauty/Cells/ShapeCollectionViewCell.xib
+++ b/ARBeauty/Cells/ShapeCollectionViewCell.xib
@@ -1,41 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ShapeCollectionViewCell" customModule="ARBeauty" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="shapeCollectionViewCell" id="gTV-IL-0wX" customClass="ShapeCollectionViewCell" customModule="ARBeauty" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ffN-BR-0rA">
-                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f9D-JO-mgl" userLabel="ContentView">
+                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ffN-BR-0rA">
+                                <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Shape=short" translatesAutoresizingMaskIntoConstraints="NO" id="8Zm-Bp-eGq">
+                                <rect key="frame" x="7.5" y="7.5" width="45" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="45" id="Sgz-5t-zGn"/>
+                                    <constraint firstAttribute="height" constant="45" id="hGj-y8-3ml"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="ffN-BR-0rA" secondAttribute="trailing" id="Cg2-66-TRF"/>
+                            <constraint firstAttribute="bottom" secondItem="ffN-BR-0rA" secondAttribute="bottom" id="EIa-91-XGi"/>
+                            <constraint firstItem="8Zm-Bp-eGq" firstAttribute="centerX" secondItem="f9D-JO-mgl" secondAttribute="centerX" id="FYs-yh-NpN"/>
+                            <constraint firstItem="8Zm-Bp-eGq" firstAttribute="centerY" secondItem="f9D-JO-mgl" secondAttribute="centerY" id="JCK-KT-7HJ"/>
+                            <constraint firstItem="ffN-BR-0rA" firstAttribute="leading" secondItem="f9D-JO-mgl" secondAttribute="leading" id="sM7-EE-aZM"/>
+                            <constraint firstItem="ffN-BR-0rA" firstAttribute="top" secondItem="f9D-JO-mgl" secondAttribute="top" id="tdg-6C-aKO"/>
+                        </constraints>
                     </view>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Shape=short" translatesAutoresizingMaskIntoConstraints="NO" id="8Zm-Bp-eGq">
-                        <rect key="frame" x="10" y="10" width="30" height="30"/>
-                    </imageView>
                 </subviews>
             </view>
-            <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="8Zm-Bp-eGq" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="0Oa-fh-hcD"/>
-                <constraint firstAttribute="bottom" secondItem="ffN-BR-0rA" secondAttribute="bottom" id="6FC-Ct-3Pq"/>
-                <constraint firstItem="8Zm-Bp-eGq" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="8eq-ww-Oyc"/>
-                <constraint firstItem="ffN-BR-0rA" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="CSe-OJ-5BY"/>
-                <constraint firstAttribute="trailing" secondItem="ffN-BR-0rA" secondAttribute="trailing" id="Kre-LN-0kK"/>
-                <constraint firstAttribute="trailing" secondItem="8Zm-Bp-eGq" secondAttribute="trailing" constant="10" id="UKa-yq-vj5"/>
-                <constraint firstAttribute="bottom" secondItem="8Zm-Bp-eGq" secondAttribute="bottom" constant="10" id="YeF-B5-03B"/>
-                <constraint firstItem="ffN-BR-0rA" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="vBN-G1-Kc4"/>
+                <constraint firstItem="f9D-JO-mgl" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Isi-D5-yyc"/>
+                <constraint firstAttribute="bottom" secondItem="f9D-JO-mgl" secondAttribute="bottom" id="Ujv-M1-oiY"/>
+                <constraint firstAttribute="trailing" secondItem="f9D-JO-mgl" secondAttribute="trailing" id="anJ-ox-ckY"/>
+                <constraint firstItem="f9D-JO-mgl" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="iuI-m6-eyx"/>
             </constraints>
             <connections>
                 <outlet property="outlineView" destination="ffN-BR-0rA" id="TeB-Pc-2gc"/>
